// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css fallback value 1`] = `
".a {
  color: red;
}


<div className=ui-box a />;
"
`;

exports[`keyframe 1`] = `
"@font-face {
  font-weight: 400;
  src: url(\\"https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-regular.woff2\\")
    format(\\"woff2\\");
  font-family: \\"Segoe UI\\";
}
@font-face {
  font-weight: 600;
  src: url(\\"https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-semibold.woff2\\")
    format(\\"woff2\\");
  font-family: \\"Segoe UI\\";
}
@font-face {
  font-weight: 700;
  src: url(\\"https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-bold.woff2\\")
    format(\\"woff2\\");
  font-family: \\"Segoe UI\\";
} /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
}
main {
  display: block;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
pre {
  font-family: monospace, monospace;
  font-size: 1em;
}
a {
  background-color: transparent;
}
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}
b,
strong {
  font-weight: bolder;
}
code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
img {
  border-style: none;
}
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}
button,
input {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
[type=\\"button\\"],
[type=\\"reset\\"],
[type=\\"submit\\"],
button {
  -webkit-appearance: button;
}
[type=\\"button\\"]::-moz-focus-inner,
[type=\\"reset\\"]::-moz-focus-inner,
[type=\\"submit\\"]::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
[type=\\"button\\"]:-moz-focusring,
[type=\\"reset\\"]:-moz-focusring,
[type=\\"submit\\"]:-moz-focusring,
button:-moz-focusring {
  outline: 1px dotted ButtonText;
}
fieldset {
  padding: 0.35em 0.75em 0.625em;
}
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}
progress {
  vertical-align: baseline;
}
textarea {
  overflow: auto;
}
[type=\\"checkbox\\"],
[type=\\"radio\\"] {
  box-sizing: border-box;
  padding: 0;
}
[type=\\"number\\"]::-webkit-inner-spin-button,
[type=\\"number\\"]::-webkit-outer-spin-button {
  height: auto;
}
[type=\\"search\\"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
[type=\\"search\\"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
details {
  display: block;
}
summary {
  display: list-item;
}
template {
  display: none;
}
[hidden] {
  display: none;
}
body {
  padding-top: 0;
  padding-left: 0;
  padding-bottom: 0;
  padding-right: 0;
  margin-top: 0;
  margin-left: 0;
  margin-bottom: 0;
  margin-right: 0;
  font-family: \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Apple Color Emoji\\",
    \\"Segoe UI Emoji\\", Helvetica, Arial, sans-serif;
  font-size: 0.875rem;
  line-height: 1.4286;
}
* {
  box-sizing: border-box;
}
*:before {
  box-sizing: border-box;
}
*:after {
  box-sizing: border-box;
}
@-webkit-keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
@-moz-keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
@keyframes k1 {
  from {
    color: red;
  }
  to {
    color: blue;
  }
}
.a {
  background-color: #fff;
}
.b {
  color: #252423;
}
.c {
  text-align: left;
}
.d ::-webkit-scrollbar {
  height: 1rem;
}
.e ::-webkit-scrollbar {
  width: 1rem;
}
.f ::-webkit-scrollbar:disabled {
  display: none;
}
.g ::-webkit-scrollbar-thumb {
  border-top-left-radius: 0.5625rem;
}
.h ::-webkit-scrollbar-thumb {
  border-top-right-radius: 0.5625rem;
}
.i ::-webkit-scrollbar-thumb {
  border-bottom-right-radius: 0.5625rem;
}
.j ::-webkit-scrollbar-thumb {
  border-bottom-left-radius: 0.5625rem;
}
.k ::-webkit-scrollbar-thumb {
  border-top-style: solid;
}
.l ::-webkit-scrollbar-thumb {
  border-right-style: solid;
}
.m ::-webkit-scrollbar-thumb {
  border-bottom-style: solid;
}
.n ::-webkit-scrollbar-thumb {
  border-left-style: solid;
}
.o ::-webkit-scrollbar-thumb {
  border-top-width: 0.25rem;
}
.p ::-webkit-scrollbar-thumb {
  border-right-width: 0.25rem;
}
.q ::-webkit-scrollbar-thumb {
  border-bottom-width: 0.25rem;
}
.r ::-webkit-scrollbar-thumb {
  border-left-width: 0.25rem;
}
.s ::-webkit-scrollbar-thumb {
  border-top-color: transparent;
}
.t ::-webkit-scrollbar-thumb {
  border-right-color: transparent;
}
.u ::-webkit-scrollbar-thumb {
  border-bottom-color: transparent;
}
.v ::-webkit-scrollbar-thumb {
  border-left-color: transparent;
}
.w ::-webkit-scrollbar-thumb {
  background-clip: content-box;
}
.x ::-webkit-scrollbar-thumb {
  background-color: #c8c6c4;
}
.y ::-webkit-scrollbar-thumb:hover {
  background-color: #979593;
}
.z ::-webkit-scrollbar-thumb:hover {
  border-top-style: solid;
}
.ab ::-webkit-scrollbar-thumb:hover {
  border-right-style: solid;
}
.ac ::-webkit-scrollbar-thumb:hover {
  border-bottom-style: solid;
}
.ae ::-webkit-scrollbar-thumb:hover {
  border-left-style: solid;
}
.af ::-webkit-scrollbar-thumb:hover {
  border-top-width: 0.125rem;
}
.ag ::-webkit-scrollbar-thumb:hover {
  border-right-width: 0.125rem;
}
.ah ::-webkit-scrollbar-thumb:hover {
  border-bottom-width: 0.125rem;
}
.ai ::-webkit-scrollbar-thumb:hover {
  border-left-width: 0.125rem;
}
.aj ::-webkit-scrollbar-thumb:hover {
  border-top-color: transparent;
}
.ak ::-webkit-scrollbar-thumb:hover {
  border-right-color: transparent;
}
.al ::-webkit-scrollbar-thumb:hover {
  border-bottom-color: transparent;
}
.am ::-webkit-scrollbar-thumb:hover {
  border-left-color: transparent;
}
.an ::-webkit-scrollbar-track {
  background-color: transparent;
}
.ao {
  display: inline-block;
}
.ap {
  animation-name: k1;
}
.aq {
  animation-duration: 5s;
}
.ar {
  speak: none;
}
.as {
  vertical-align: middle;
}
.at {
  padding-top: 0.25rem;
}
.au {
  padding-right: 0.25rem;
}
.av {
  padding-bottom: 0.25rem;
}
.aw {
  padding-left: 0.25rem;
}
.ax {
  box-shadow: 0 0 0 0.05rem currentColor inset;
}
.ay {
  border-top-left-radius: 50%;
}
.az {
  border-top-right-radius: 50%;
}
.ba {
  border-bottom-right-radius: 50%;
}
.bb {
  border-bottom-left-radius: 50%;
}
.bc {
  align-items: center;
  -webkit-box-align: center;
}
.bd {
  box-sizing: content-box;
}
.be {
  justify-content: center;
  -webkit-box-pack: center;
}
.bf {
  font-size: 1rem;
}
.bg {
  line-height: 1;
}
.bh {
  width: 1rem;
}
.bi {
  height: 1rem;
}
.bj::before {
  content: ?;
}
.bk {
  transform: rotate(0deg);
}
.bl {
  display: none;
}
.bm {
  display: block;
}
.bn {
  fill: currentColor;
}


<div
  className=ui-provider__box a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an
  dir=ltr
>
  <div className=ui-provider__box a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an>
    <div className=ui-animation ao>
      <span
        className=ui-icon ar as at au av aw ax ay az ba bb bc bd ao be bf bg bh bi bj bk ap aq
        role=img
        aria-hidden=true
      />
    </div>
  </div>
</div>;
"
`;

exports[`keyframe returning css fallback value 1`] = `
"@font-face {
  font-weight: 400;
  src: url(\\"https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-regular.woff2\\")
    format(\\"woff2\\");
  font-family: \\"Segoe UI\\";
}
@font-face {
  font-weight: 600;
  src: url(\\"https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-semibold.woff2\\")
    format(\\"woff2\\");
  font-family: \\"Segoe UI\\";
}
@font-face {
  font-weight: 700;
  src: url(\\"https://static2.sharepointonline.com/files/fabric/assets/fonts/segoeui-westeuropean/segoeui-bold.woff2\\")
    format(\\"woff2\\");
  font-family: \\"Segoe UI\\";
} /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
html {
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
}
main {
  display: block;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
pre {
  font-family: monospace, monospace;
  font-size: 1em;
}
a {
  background-color: transparent;
}
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}
b,
strong {
  font-weight: bolder;
}
code,
kbd,
samp {
  font-family: monospace, monospace;
  font-size: 1em;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
img {
  border-style: none;
}
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}
button,
input {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
[type=\\"button\\"],
[type=\\"reset\\"],
[type=\\"submit\\"],
button {
  -webkit-appearance: button;
}
[type=\\"button\\"]::-moz-focus-inner,
[type=\\"reset\\"]::-moz-focus-inner,
[type=\\"submit\\"]::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
[type=\\"button\\"]:-moz-focusring,
[type=\\"reset\\"]:-moz-focusring,
[type=\\"submit\\"]:-moz-focusring,
button:-moz-focusring {
  outline: 1px dotted ButtonText;
}
fieldset {
  padding: 0.35em 0.75em 0.625em;
}
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}
progress {
  vertical-align: baseline;
}
textarea {
  overflow: auto;
}
[type=\\"checkbox\\"],
[type=\\"radio\\"] {
  box-sizing: border-box;
  padding: 0;
}
[type=\\"number\\"]::-webkit-inner-spin-button,
[type=\\"number\\"]::-webkit-outer-spin-button {
  height: auto;
}
[type=\\"search\\"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
[type=\\"search\\"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
details {
  display: block;
}
summary {
  display: list-item;
}
template {
  display: none;
}
[hidden] {
  display: none;
}
body {
  padding-top: 0;
  padding-left: 0;
  padding-bottom: 0;
  padding-right: 0;
  margin-top: 0;
  margin-left: 0;
  margin-bottom: 0;
  margin-right: 0;
  font-family: \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Apple Color Emoji\\",
    \\"Segoe UI Emoji\\", Helvetica, Arial, sans-serif;
  font-size: 0.875rem;
  line-height: 1.4286;
}
* {
  box-sizing: border-box;
}
*:before {
  box-sizing: border-box;
}
*:after {
  box-sizing: border-box;
}
@-webkit-keyframes k1 {
  0% {
    opacity: 0.28;
  }
  100% {
    opacity: 0.28;
  }
}
@-moz-keyframes k1 {
  0% {
    opacity: 0.28;
  }
  100% {
    opacity: 0.28;
  }
}
@keyframes k1 {
  0% {
    opacity: 0.28;
  }
  100% {
    opacity: 0.28;
  }
}
.a {
  background-color: #fff;
}
.b {
  color: #252423;
}
.c {
  text-align: left;
}
.d ::-webkit-scrollbar {
  height: 1rem;
}
.e ::-webkit-scrollbar {
  width: 1rem;
}
.f ::-webkit-scrollbar:disabled {
  display: none;
}
.g ::-webkit-scrollbar-thumb {
  border-top-left-radius: 0.5625rem;
}
.h ::-webkit-scrollbar-thumb {
  border-top-right-radius: 0.5625rem;
}
.i ::-webkit-scrollbar-thumb {
  border-bottom-right-radius: 0.5625rem;
}
.j ::-webkit-scrollbar-thumb {
  border-bottom-left-radius: 0.5625rem;
}
.k ::-webkit-scrollbar-thumb {
  border-top-style: solid;
}
.l ::-webkit-scrollbar-thumb {
  border-right-style: solid;
}
.m ::-webkit-scrollbar-thumb {
  border-bottom-style: solid;
}
.n ::-webkit-scrollbar-thumb {
  border-left-style: solid;
}
.o ::-webkit-scrollbar-thumb {
  border-top-width: 0.25rem;
}
.p ::-webkit-scrollbar-thumb {
  border-right-width: 0.25rem;
}
.q ::-webkit-scrollbar-thumb {
  border-bottom-width: 0.25rem;
}
.r ::-webkit-scrollbar-thumb {
  border-left-width: 0.25rem;
}
.s ::-webkit-scrollbar-thumb {
  border-top-color: transparent;
}
.t ::-webkit-scrollbar-thumb {
  border-right-color: transparent;
}
.u ::-webkit-scrollbar-thumb {
  border-bottom-color: transparent;
}
.v ::-webkit-scrollbar-thumb {
  border-left-color: transparent;
}
.w ::-webkit-scrollbar-thumb {
  background-clip: content-box;
}
.x ::-webkit-scrollbar-thumb {
  background-color: #c8c6c4;
}
.y ::-webkit-scrollbar-thumb:hover {
  background-color: #979593;
}
.z ::-webkit-scrollbar-thumb:hover {
  border-top-style: solid;
}
.ab ::-webkit-scrollbar-thumb:hover {
  border-right-style: solid;
}
.ac ::-webkit-scrollbar-thumb:hover {
  border-bottom-style: solid;
}
.ae ::-webkit-scrollbar-thumb:hover {
  border-left-style: solid;
}
.af ::-webkit-scrollbar-thumb:hover {
  border-top-width: 0.125rem;
}
.ag ::-webkit-scrollbar-thumb:hover {
  border-right-width: 0.125rem;
}
.ah ::-webkit-scrollbar-thumb:hover {
  border-bottom-width: 0.125rem;
}
.ai ::-webkit-scrollbar-thumb:hover {
  border-left-width: 0.125rem;
}
.aj ::-webkit-scrollbar-thumb:hover {
  border-top-color: transparent;
}
.ak ::-webkit-scrollbar-thumb:hover {
  border-right-color: transparent;
}
.al ::-webkit-scrollbar-thumb:hover {
  border-bottom-color: transparent;
}
.am ::-webkit-scrollbar-thumb:hover {
  border-left-color: transparent;
}
.an ::-webkit-scrollbar-track {
  background-color: transparent;
}
.ao {
  display: inline-block;
}
.ap {
  animation-name: k1;
}
.aq {
  speak: none;
}
.ar {
  vertical-align: middle;
}
.as {
  padding-top: 0.25rem;
}
.at {
  padding-right: 0.25rem;
}
.au {
  padding-bottom: 0.25rem;
}
.av {
  padding-left: 0.25rem;
}
.aw {
  box-shadow: 0 0 0 0.05rem currentColor inset;
}
.ax {
  border-top-left-radius: 50%;
}
.ay {
  border-top-right-radius: 50%;
}
.az {
  border-bottom-right-radius: 50%;
}
.ba {
  border-bottom-left-radius: 50%;
}
.bb {
  align-items: center;
  -webkit-box-align: center;
}
.bc {
  box-sizing: content-box;
}
.bd {
  justify-content: center;
  -webkit-box-pack: center;
}
.be {
  font-size: 1rem;
}
.bf {
  line-height: 1;
}
.bg {
  width: 1rem;
}
.bh {
  height: 1rem;
}
.bi::before {
  content: ?;
}
.bj {
  transform: rotate(0deg);
}
.bk {
  display: none;
}
.bl {
  display: block;
}
.bm {
  fill: currentColor;
}


<div
  className=ui-provider__box a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an
  dir=ltr
>
  <div className=ui-provider__box a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak al am an>
    <div className=ui-animation ao>
      <span
        className=ui-icon aq ar as at au av aw ax ay az ba bb bc ao bd be bf bg bh bi bj ap
        role=img
        aria-hidden=true
      />
    </div>
  </div>
</div>;
"
`;

exports[`rtl 1`] = `
"

<div className=ui-provider__box dir=rtl>
  <span className=ui-text dir=auto>
    Hello
  </span>
</div>;
"
`;
